# dist-s1

./: .Dockerignore  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.nvidia  README.md  Untitled.ipynb  create_browse_pngs.py  environment.yml  environment_gpu.yml  environment_test.yml  mkdocs.yml  objects.inv  pyproject.toml  rename_browse_pngs.py  test_confirmation_demo.py  test_prior_product_validation.py
.github/workflows/: bump-tag-for-release.yml  changelog-update.yml  docker-build.yml  docker_build.yml  github-release.yml  labeled-pr.yml  pypi-delivery.yml  serve-docs.yml  static_analysis.yml  test.yml  update-docs.yml
api/runconfig/: index.html
docs/: README.md  algo_config.md  generate_api_tables.py  generate_product_tables.py  index.md  macros.py  product_documentation.md  run_config.md
docs/api/: algoconfig.md  runconfig.md
docs/config/: algoconfig.md
docs/pages/config/: overview.md
docs/pages/product_documentation/: product_documentation.md
examples/: algo_config.yml  e2e.py  e2e.sh  run_config.yml  run_steps.py  sas_run.sh
examples/no_confirmation/: _algo_config_python.yml  _run_config_python.yml  e2e.py  sas_run.sh
notebooks/: A__E2E_Workflow_Demo.ipynb  B__Run_Steps.ipynb  B__Run_step.ipynb  B__SAS_Workflow.ipynb  C__Time_series_and_confirmation.ipynb  D__Plot.ipynb  Untitled.ipynb  runner.py  wtf.tif
notebooks/plot_example/: OPERA_L3_DIST-ALERT-S1_T19HBD_20240402T100430Z_20251114T014222Z_S1A_30_v0.1_GEN-DIST-STATUS.tif
regression_test/: 0_docker_regression_test_container.sh  0_generate_golden_dataset.py  0_generate_golden_dataset_docker.sh  1_compare_sas.py  1_docker_regression_test.sh  1_update_config.py  1_update_config_and_check.py  2_delivery.py  README.md  generate_golden_dataset_docker.sh
site/: 404.html  index.html  objects.inv
site/api/: algoconfig.html  runconfig.html
src/dist_s1/: __init__.py  __main__.py  aws.py  confirmation.py  constants.py  contstants.py  despeckling.py  dist_plot.py  dist_processing.py  dist_s1_workflow.py  dist_viz.py  input_data_model.py  localize_rtc_s1.py  packaging.py  proc.py  processing.py  product_name_model.py  rio_tools.py  water_mask.py  workflows.py
src/dist_s1/data_models/: __init__.py  algoconfig_model.py  data_utils.py  defaults.py  output_models.py  runconfig_model.py
src/dist_s1/etc/: entrypoint.sh
stable/: 404.html  index.html
stable/config/algoconfig/: index.html
stable/config/runconfig/: index.html
stable/pages/config/algoconfig/: index.html
stable/pages/config/overview/: index.html
stable/pages/config/runconfig/: index.html
stable/pages/product_documentation/disturbance_labels/: index.html
stable/pages/product_documentation/product_documentation/: index.html
stable/pages/product_documentation/product_layers/: index.html
stable/pages/product_documentation/product_models/: index.html
stable/product_models/: index.html
stable/search/: search_index.json
test/: 404.html  generate_api_tables.py  index.html
test/algo_config/: index.html
test/api/algoconfig/: index.html
test/api/runconfig/: index.html
test/config/algoconfig/: index.html
test/config/runconfig/: index.html
test/pages/config/algoconfig/: index.html
test/pages/config/overview/: index.html
test/pages/config/runconfig/: index.html
test/pages/product_documentation/disturbance_labels/: index.html
test/pages/product_documentation/product_documentation/: index.html
test/pages/product_documentation/product_layers/: index.html
test/pages/product_documentation/product_models/: index.html
test/product_models/: index.html
test/run_config/: index.html
test/search/: search_index.json
tests/: Generate_Test_Data.ipynb  conftest.py  generation_of_input_data_subset.md  test_aws.py  test_confirmation.py  test_constants.py  test_input_data_model.py  test_main.py  test_output_models.py  test_runconfig_model.py  test_water_mask.py  test_workflows.py
tests/test_data/10SGD_cropped/: 10SGD__137__2024-01-08_dist_s1_inputs.parquet  post_10SGD.parquet  pre_10SGD.parquet  runconfig.yml
tests/test_data/10SGD_cropped/137/2024-01-08/: OPERA_L2_RTC-S1_T137-292318-IW1_20240108T015902Z_20240109T091413Z_S1A_30_v1.0_VH.tif  OPERA_L2_RTC-S1_T137-292318-IW1_20240108T015902Z_20240109T091413Z_S1A_30_v1.0_VV.tif  OPERA_L2_RTC-S1_T137-292318-IW2_20240108T015903Z_20240109T091413Z_S1A_30_v1.0_VH.tif  OPERA_L2_RTC-S1_T137-292318-IW2_20240108T015903Z_20240109T091413Z_S1A_30_v1.0_VV.tif  OPERA_L2_RTC-S1_T137-292319-IW1_20240108T015905Z_20240109T091413Z_S1A_30_v1.0_VH.tif  (+25 more)
tests/test_data/algorithm_config_ymls/: test_algo_config.yml  test_algo_config_conflicts.yml  test_algo_config_direct.yml  test_algo_config_invalid.yml
tests/test_data/cropped/: 10SGD__137__2024-09-04_dist_s1_inputs.parquet  10SGD__137__2025-01-02_dist_s1_inputs.parquet  10SGD__137__2025-01-02_dist_s1_inputs_20_baseline.parquet  sample_runconfig_10SGD_cropped.yml
tests/test_data/cropped_prior/: 10SGD__137__2024-12-21_dist_s1_inputs.parquet
tests/test_data/water_mask_samples/: 01VCK_water_mask_antimeridian.tif  17SLR_bad_water_mask.tif  17SLR_good_water_mask.tif  water_mask_10SGD_large.tif
(+3030 files in other folders)
