[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dist-s1"
authors = [
  { name = "Richard West, Charlie Marshak, Talib Oliver-Cabrera, and Jungkyo Jung", email = "charlie.z.marshak@jpl.nasa.gov"},
]
description = "The workflow to generate the DIST-S1 product"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = '>=3.12'

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
]
license = { text = 'Apache-2.0' }
dynamic = ['version']

dependencies = ["numpy", "asf-search", "geopandas", "rasterio", "distmetrics", "dist-s1-enumerator", "torch", "pandas", "scipy", "tile-mate", "pydantic", "boto3"]

[project.urls]
Homepage = "https://github.com/opera-adt/dist-s1"
"Bug Tracker" = "https://github.com/opera-adt/dist-s1/issues"
"Discussions" = "https://github.com/opera-adt/dist-s1/discussions"
"Changelog" = "https://github.com/opera-adt/dist-s1/releases"

[project.scripts]
"dist-s1" = "dist_s1.__main__:cli"

[tool.mkdocstrings]
handlers = ["python"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["notebooks*", "tests*", "examples*", "assets*"]

[tool.setuptools.dynamic]
readme = { file = ['README.md'], content-type = 'text/markdown' }

[tool.setuptools.package-data]
dist_s1 = ["py.typed"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "notebooks/*",
    "tests/data/*",
]
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = [
    "F",   # flake8: https://docs.astral.sh/ruff/rules/#flake8-f
    "E",   # flake8: https://docs.astral.sh/ruff/rules/#flake8-e
    "I",   # isort: https://docs.astral.sh/ruff/rules/#isort-i
    "UP",  # pyupgrade: https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "D",   # pydocstyle: https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "ANN", # annotations: https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "PTH", # use-pathlib-pth: https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TRY", # tryceratops
    "Q",   # flake8-quotes: https://docs.astral.sh/ruff/rules/#flake8-quotes-q
]

ignore = [
  "D100",   # Missing docstring in public module
  "D101",   # Missing docstring in public class
  "D102",   # Missing docstring in public method
  "D103",   # Missing docstring in public function
  "D104",   # Missing docstring in public package
  "D105",   # Missing docstring in magic method
  "D203",   # 1 blank line required before class docstring
  "D213",   # Multi-line docstring summary should start at the second line
  "TRY003", # Avoid specifying long messages outside the exception
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
dist-s1 = { path = ".", editable = true }

[tool.pixi.tasks]
lint = "ruff check src tests"
format = "ruff format src tests"
fix = "ruff check --fix src tests"

[tool.pixi.dependencies]
python = ">=3.12,<4"
asf_search = ">=12.2.2,<13"
click = ">=8.1,<9"
compilers = ">=1.11.0,<2"
dem_stitcher = ">=2.5.13,<3"
dist_s1_enumerator = ">=1.0.13,<2"
distmetrics = ">=1.0.6,<2"
geopandas = ">=1.1.4,<2"
jupyterlab = ">=4.6.1,<5"
matplotlib = ">=3.11.0,<4"
numpy = ">=2.5.0,<3"
pandas = ">=3.0.3,<4"
pandera = ">=0.31.1,<0.32"
pydantic = ">=2.13.4,<3"
pytest = ">=9.1.1,<10"
pytest-cov = ">=7.1.0,<8"
pytest-mock = ">=3.15.1,<4"
pytorch = ">=2.10.0,<3"
pyyaml = ">=6.0.3,<7"
rasterio = ">=1.4.0,<2"
ruff = ">=0.15.20,<0.16"
scipy = ">=1.18.0,<2"
setuptools = ">=81.0.0,<83"
setuptools_scm = ">=10.2.0,<11"
shapely = ">=2.1.2,<3"
tile_mate = ">=0.0.15"
tqdm = ">=4.68.3,<5"
boto3 = ">=1.43.36,<2"
mkdocs = ">=1.6,<2"
mkdocs-material = ">=9.7.6,<10"
mkdocstrings-python = ">=2.0.5,<3"
mkdocs-redirects = ">=1.2.3,<2"
mkdocs-macros-plugin = ">=1.5.0,<2"
griffe-pydantic = ">=1.3.1,<2"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
default = { features = ["py313"], solve-group = "py313" }
py312 = { features = ["py312"], solve-group = "py312" }
py313 = { features = ["py313"], solve-group = "py313" }
py314 = { features = ["py314"], solve-group = "py314" }
